--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -158,12 +158,13 @@ $item-button-line-height:         28px !default;
 $item-icon-font-size:             32px !default;
 $item-icon-fill-font-size:        28px !default;
 
+$item-chevron-width:              15px !default;
+
 $item-avatar-width:               40px !default;
 $item-avatar-height:              40px !default;
 
 $item-thumbnail-width:            80px !default;
 $item-thumbnail-height:           80px !default;
-$item-thumbnail-margin:           10px !default;
 
 $item-divider-bg:                 #f5f5f5 !default;
 $item-divider-color:              #777 !default;
